--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.5.0",
     "uuid": "^8.3.2"
   }
 }
